--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,8 @@
         <failOnMissingWebXml>false</failOnMissingWebXml>
         <java.version>1.8</java.version>
         <maven-jaxb2-plugin.version>0.13.2</maven-jaxb2-plugin.version>
+        <!-- commons and utils -->
+        <commons-lang3.version>3.4</commons-lang3.version>
     </properties>
 
     <dependencies>
@@ -45,6 +47,13 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <!-- Used for things like EqualsBuilder -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>${commons-lang3.version}</version>
         </dependency>
 
         <!-- For the REST hateoas stuff -->
