--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.h2.console.enabled=true
 spring.jpa.properties.hibernate.hbm2ddl.import_files=db/library.sql
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+hateoas.publicAddress=http://localhost:9984
